Bug 139877. Right click context menu accesskeys require 'Enter' to perform action (regression). Fix by Kyle Yuan. r=aaronl, sr=jst