layout/xul/base/src/nsMenuPopupFrame.cpp
@@ -1508,7 +1508,8 @@ nsMenuPopupFrame::FindMenuWithShortcut(nsIDOMKeyEvent* aKeyEvent, PRBool& doActi
     nsCOMPtr<nsIAtom> tag;
     parentContent->GetTag(*getter_AddRefs(tag));
     // toolbarbutton is for the "Bookmarks" button on the toolbar
-    if (tag == nsXULAtoms::menu || tag == nsXULAtoms::toolbarbutton) 
+    // popupset is for the right-click popup menu
+    if (tag == nsXULAtoms::menu || tag == nsXULAtoms::toolbarbutton || tag == nsXULAtoms::popupset)
       isMenu = PR_TRUE;
   }
 
